[package]
name = "bench"
authors = ["Dominique Chuo <dominique@reifydb.com>"]
homepage = "https://reifydb.com"
repository = "https://github.com/reifydb/reifydb-bench"
readme = "readme.md"
license = "AGPL-3"

version = "0.0.1"
rust-version = "1.85.1"
edition = "2024"

[lib]
name = "bench"
path = "src/lib.rs"

[dependencies]
reifydb = { path = "../reifydb/pkg/rust/reifydb", features = ["sub_server", "sub_logging"] }
reifydb-rql = { path = "../reifydb/crates/reifydb-rql" }
reifydb-sub-server = { path = "../reifydb/crates/reifydb-sub-server" }

criterion = { version = "0.7", features = ["html_reports"] }
serde_json = { version = "1.0.140" }

[[bench]]
name = "engine-memory-optimistic"
path = "benches/engine/01_memory_optimistic.rs"
harness = false

[[bench]]
name = "rql-tokenize"
path = "benches/rql/tokenize.rs"
harness = false

[[bench]]
name = "rql-parse"
path = "benches/rql/parse.rs"
harness = false

[[bench]]
name = "rql-logical"
path = "benches/rql/logical.rs"
harness = false

[[bench]]
name = "ws-server"
path = "benches/server/ws.rs"
harness = false
